Memperbaiki profile parcelable

--- a/app/src/main/res/layout/activity_bundle.xml
+++ b/app/src/main/res/layout/activity_bundle.xml
@@ -86,10 +86,9 @@
     </LinearLayout>
 
     <Button
-        android:text="@string/submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="handleSubmit"
-        />
+        android:text="@string/submit" />
 
 </LinearLayout>
